--- a/.gitignore
+++ b/.gitignore
@@ -1,20 +1,5 @@
-vendor/
-node_modules/
-npm-debug.log
+.DS_Store
+.idea
 
-# Laravel 4 specific
-bootstrap/compiled.php
-app/storage/
-
-# Laravel 5 & Lumen specific
-public/storage
-public/hot
-storage/*.key
-.env.*.php
-.env.php
-.env
-Homestead.yaml
-Homestead.json
-
-# Rocketeer PHP task runner and deployment package. https://github.com/rocketeers/rocketeer
-.rocketeer/
+# Ignore all vendor files included by composer and the lock file
+/vendor
