--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-  "name": "igniter/flame",
+  "name": "tastyigniter/flame",
   "description": "TastyIgniter Flame core library of TastyIgniter, add some flame to laravel",
   "homepage": "http://tastyigniter.com",
   "keywords": ["tastyigniter", "igniter", "flame", "laravel"],
