--- a/composer.json
+++ b/composer.json
@@ -17,7 +17,7 @@
     "doctrine/instantiator": "1.0.*",
     "doctrine/dbal": "2.5.*",
     "symfony/yaml": "~3.2",
-    "october/rain": "^1.0",
+    "october/rain": "1.0.*",
     "guzzlehttp/guzzle": "6.3.*",
     "kalnoy/nestedset": "4.3.*"
   },
@@ -43,6 +43,11 @@
   "autoload": {
     "psr-4": {
       "Igniter\\Flame\\": "src/"
+    }
+  },
+  "extra": {
+    "branch-alias": {
+      "dev-master": "1.0-dev"
     }
   },
   "minimum-stability": "dev"
