--- a/composer.json
+++ b/composer.json
@@ -15,11 +15,12 @@
     "fideloper/proxy": "~3.3",
     "filp/whoops": "~2.0",
     "doctrine/instantiator": "1.0.*",
+    "kriswallsmith/assetic": "~1.4",
+    "natxet/CssMin": "~3.0",
+    "guzzlehttp/guzzle": "~6.3",
     "symfony/yaml": "~3.2",
-    "symfony/translation": "3.4.*",
     "october/rain": "1.0.*",
-    "guzzlehttp/guzzle": "6.3.*",
-    "kalnoy/nestedset": "4.3.*"
+    "kalnoy/nestedset": "~4.3"
   },
   "require-dev": {
     "phpunit/phpunit": "~6.0",
