--- a/composer.json
+++ b/composer.json
@@ -20,7 +20,8 @@
     "guzzlehttp/guzzle": "~6.3",
     "symfony/yaml": "~3.2",
     "october/rain": "1.0.*",
-    "kalnoy/nestedset": "~4.3"
+    "kalnoy/nestedset": "~4.3",
+    "watson/validating": "~3.1"
   },
   "require-dev": {
     "phpunit/phpunit": "~6.0",
