--- a/composer.json
+++ b/composer.json
@@ -42,6 +42,9 @@
     "fzaninotto/faker": "~1.4"
   },
   "autoload": {
+    "files": [
+      "src/Support/helpers.php"
+    ],
     "psr-4": {
       "Igniter\\Flame\\": "src/"
     }
