--- a/composer.json
+++ b/composer.json
@@ -22,7 +22,8 @@
     "symfony/yaml": "~3.2",
     "october/rain": "1.0.*",
     "kalnoy/nestedset": "~4.3",
-    "watson/validating": "~3.1"
+    "watson/validating": "~3.1",
+    "league/glide": "^1.2"
   },
   "require-dev": {
     "phpunit/phpunit": "~6.0",
