--- a/composer.json
+++ b/composer.json
@@ -14,32 +14,23 @@
     "php": ">=7.0",
     "fideloper/proxy": "~3.3",
     "filp/whoops": "~2.0",
-    "doctrine/instantiator": "1.0.*",
-    "kriswallsmith/assetic": "~1.4",
-    "natxet/CssMin": "~3.0",
-    "leafo/scssphp": "~0.7",
+    "doctrine/instantiator": "~1.0",
     "guzzlehttp/guzzle": "~6.3",
     "symfony/yaml": "~3.2",
-    "october/rain": "1.0.*",
+    "october/rain": "~1.0",
     "kalnoy/nestedset": "~4.3",
     "watson/validating": "~3.1",
+    "natxet/CssMin": "~3.0",
+    "leafo/scssphp": "~0.7",
+    "kriswallsmith/assetic": "^1.4",
     "league/glide": "^1.2"
   },
   "require-dev": {
     "phpunit/phpunit": "~6.0",
-    "illuminate/database": "5.5.*",
-    "illuminate/filesystem": "5.5.*",
-    "illuminate/queue": "5.5.*",
-    "illuminate/support": "5.5.*",
-    "illuminate/log": "5.5.*",
-    "illuminate/mail": "5.5.*",
-    "illuminate/events": "5.5.*",
-    "illuminate/pagination": "5.5.*",
-    "illuminate/validation": "5.5.*",
-    "swiftmailer/swiftmailer": "~5.1",
+    "swiftmailer/swiftmailer": "~6.0",
     "laravel/tinker": "~1.0",
-    "laravel/dusk": "^1.0",
-    "mockery/mockery": "0.9.*",
+    "laravel/dusk": "~1.0",
+    "mockery/mockery": "~0.9",
     "fzaninotto/faker": "~1.4"
   },
   "autoload": {
