--- a/composer.json
+++ b/composer.json
@@ -17,20 +17,21 @@
   ],
   "require": {
     "php": ">=7.1",
-    "fideloper/proxy": "~3.3",
+    "fideloper/proxy": "~4.0",
     "filp/whoops": "~2.0",
     "doctrine/instantiator": "~1.0",
     "october/rain": "~1.0",
     "guzzlehttp/guzzle": "~6.3",
     "symfony/yaml": "~3.2",
-    "kalnoy/nestedset": "~4.3",
-    "watson/validating": "~3.1",
+    "kalnoy/nestedset": "~5.0",
+    "watson/validating": "~3.3",
     "natxet/cssmin": "~3.0",
-    "leafo/scssphp": "~0.7",
-    "league/glide": "^1.2"
+    "scssphp/scssphp": "~1.0",
+    "league/glide": "~1.5",
+    "laravel/helpers": "~1.1"
   },
   "require-dev": {
-    "phpunit/phpunit": "~6.0",
+    "phpunit/phpunit": "~7.5",
     "swiftmailer/swiftmailer": "~6.0",
     "laravel/tinker": "~1.0",
     "laravel/dusk": "~1.0",
