--- a/composer.json
+++ b/composer.json
@@ -16,27 +16,27 @@
     }
   ],
   "require": {
-    "php": ">=7.1",
-    "fideloper/proxy": "~4.0",
-    "filp/whoops": "~2.0",
-    "doctrine/instantiator": "~1.0",
-    "october/rain": "~1.0",
-    "guzzlehttp/guzzle": "~6.3",
-    "symfony/yaml": "~3.2",
-    "kalnoy/nestedset": "~5.0",
-    "watson/validating": "~3.3",
-    "natxet/cssmin": "~3.0",
-    "scssphp/scssphp": "~1.0",
-    "league/glide": "~1.5",
-    "laravel/helpers": "~1.1"
+    "php": ">=7.2",
+    "fideloper/proxy": "^4.0",
+    "filp/whoops": "^2.0",
+    "doctrine/instantiator": "^1.0",
+    "october/rain": "^1.0",
+    "guzzlehttp/guzzle": "^6.3",
+    "symfony/yaml": "^3.2",
+    "kalnoy/nestedset": "^5.0",
+    "watson/validating": "^3.3",
+    "natxet/cssmin": "^3.0",
+    "scssphp/scssphp": "^1.0",
+    "league/glide": "^1.5",
+    "laravel/helpers": "^1.1"
   },
   "require-dev": {
-    "phpunit/phpunit": "~8.0",
-    "swiftmailer/swiftmailer": "~6.0",
-    "laravel/tinker": "~1.0",
-    "laravel/dusk": "~1.0",
-    "mockery/mockery": "~1.0",
-    "fzaninotto/faker": "~1.4"
+    "phpunit/phpunit": "^8.0",
+    "swiftmailer/swiftmailer": "^6.0",
+    "laravel/tinker": "^2.0",
+    "laravel/dusk": "^5.9",
+    "mockery/mockery": "^1.0",
+    "fzaninotto/faker": "^1.4"
   },
   "autoload": {
     "files": [
