improve: update composer dependencies version constraints

--- a/composer.json
+++ b/composer.json
@@ -17,26 +17,31 @@
   ],
   "require": {
     "php": ">=7.2",
-    "fideloper/proxy": "^4.0",
-    "filp/whoops": "^2.0",
-    "doctrine/instantiator": "^1.0",
-    "october/rain": "^1.0",
-    "guzzlehttp/guzzle": "^6.3",
-    "symfony/yaml": "^3.2",
-    "kalnoy/nestedset": "^5.0",
-    "watson/validating": "^3.3",
-    "natxet/cssmin": "^3.0",
-    "scssphp/scssphp": "^1.0",
-    "league/glide": "^1.5",
-    "laravel/helpers": "^1.1"
+    "ext-ctype": "*",
+    "ext-curl": "*",
+    "ext-dom": "*",
+    "ext-fileinfo": "*",
+    "ext-gd": "*",
+    "ext-json": "*",
+    "ext-libxml": "*",
+    "ext-PDO": "*",
+    "ext-zip": "*",
+    "filp/whoops": "~2.0",
+    "october/rain": "dev-wip/laravel-6 as 1.0",
+    "guzzlehttp/guzzle": "~7.0",
+    "symfony/yaml": "~3.4",
+    "kalnoy/nestedset": "~5.0",
+    "watson/validating": "~4.0",
+    "natxet/cssmin": "~3.0",
+    "scssphp/scssphp": "~1.0",
+    "league/glide": "~1.6",
+    "laravel/helpers": "~1.2",
+    "laravel/tinker": "~2.0"
   },
   "require-dev": {
-    "phpunit/phpunit": "^8.0",
-    "swiftmailer/swiftmailer": "^6.0",
-    "laravel/tinker": "^2.0",
-    "laravel/dusk": "^5.9",
-    "mockery/mockery": "^1.0",
-    "fzaninotto/faker": "^1.4"
+    "phpunit/phpunit": "^8.0|^9.0",
+    "squizlabs/php_codesniffer": "3.*",
+    "php-parallel-lint/php-parallel-lint": "~1.2"
   },
   "autoload": {
     "files": [
