--- a/composer.json
+++ b/composer.json
@@ -25,8 +25,8 @@
     "ext-json": "*",
     "ext-libxml": "*",
     "ext-PDO": "*",
-    "ext-zip": "*",
     "filp/whoops": "~2.0",
+    "doctrine/dbal": "^2.6",
     "october/rain": "dev-wip/laravel-6 as 1.0",
     "guzzlehttp/guzzle": "~7.0",
     "symfony/yaml": "~3.4",
@@ -40,8 +40,22 @@
   },
   "require-dev": {
     "phpunit/phpunit": "^8.0|^9.0",
-    "squizlabs/php_codesniffer": "3.*",
-    "php-parallel-lint/php-parallel-lint": "~1.2"
+    "illuminate/database": "^6.0",
+    "illuminate/encryption": "^6.0",
+    "illuminate/filesystem": "^6.0",
+    "illuminate/queue": "^6.0",
+    "illuminate/support": "^6.0",
+    "illuminate/log": "^6.0",
+    "illuminate/mail": "^6.0",
+    "illuminate/events": "^6.0",
+    "illuminate/pagination": "^6.0",
+    "illuminate/routing": "^6.0",
+    "illuminate/validation": "^6.0",
+    "illuminate/view": "^6.0",
+    "illuminate/cache": "^6.0"
+  },
+  "suggest": {
+    "ext-pdo_mysql": "Required to use MySQL databases"
   },
   "autoload": {
     "files": [
