--- a/composer.json
+++ b/composer.json
@@ -25,21 +25,20 @@
     "ext-json": "*",
     "ext-libxml": "*",
     "ext-PDO": "*",
-    "filp/whoops": "~2.0",
-    "doctrine/dbal": "^2.6",
+    "ext-zip": "*",
+    "fideloper/proxy": "~4.0",
+    "doctrine/instantiator": "~1.0",
     "october/rain": "~1.0",
-    "guzzlehttp/guzzle": "~7.0",
-    "symfony/yaml": "~3.4",
+    "guzzlehttp/guzzle": "~6.3",
     "kalnoy/nestedset": "~5.0",
     "watson/validating": "~4.0",
     "natxet/cssmin": "~3.0",
     "scssphp/scssphp": "~1.0",
-    "league/glide": "~1.6",
-    "laravel/helpers": "~1.2",
-    "laravel/tinker": "~2.0"
+    "league/glide": "~1.5",
+    "laravel/helpers": "~1.1"
   },
   "require-dev": {
-    "phpunit/phpunit": "^8.0|^9.0",
+    "phpunit/phpunit": "^8.0",
     "illuminate/database": "^6.0",
     "illuminate/encryption": "^6.0",
     "illuminate/filesystem": "^6.0",
@@ -52,7 +51,9 @@
     "illuminate/routing": "^6.0",
     "illuminate/validation": "^6.0",
     "illuminate/view": "^6.0",
-    "illuminate/cache": "^6.0"
+    "illuminate/cache": "^6.0",
+    "mockery/mockery": "^1.0",
+    "fzaninotto/faker": "^1.4"
   },
   "suggest": {
     "ext-pdo_mysql": "Required to use MySQL databases"
