--- a/composer.json
+++ b/composer.json
@@ -37,7 +37,7 @@
     "league/glide": "~1.5"
   },
   "require-dev": {
-    "phpunit/phpunit": "^8.0",
+    "phpunit/phpunit": "^8.0|^9.0",
     "illuminate/database": "^6.0",
     "illuminate/encryption": "^6.0",
     "illuminate/filesystem": "^6.0",
@@ -74,5 +74,6 @@
       "dev-master": "1.0-dev"
     }
   },
-  "minimum-stability": "dev"
+  "minimum-stability": "dev",
+  "prefer-stable": true
 }
