--- a/composer.json
+++ b/composer.json
@@ -52,7 +52,7 @@
     "illuminate/view": "^6.0",
     "illuminate/cache": "^6.0",
     "mockery/mockery": "^1.3",
-    "fzaninotto/faker": "^1.9"
+    "fakerphp/faker": "^1.14"
   },
   "suggest": {
     "ext-pdo_mysql": "Required to use MySQL databases"
