--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -9,7 +9,7 @@ jobs:
     strategy:
       max-parallel: 6
       matrix:
-        php: ['7.2', '7.3', '7.4']
+        php: ['7.3', '7.4']
       fail-fast: false
 
     name: 'PHPUnit Tests ${{ matrix.php }} / ${{ matrix.dbName }}'
