--- a/composer.json
+++ b/composer.json
@@ -35,7 +35,9 @@
     "kalnoy/nestedset": "~5.0",
     "natxet/cssmin": "~3.0",
     "scssphp/scssphp": "~1.0",
-    "league/glide": "~1.5"
+    "league/glide": "~1.5",
+    "fruitcake/laravel-cors": "~2.0",
+    "laravel/tinker": "~2.0"
   },
   "require-dev": {
     "phpunit/phpunit": "^8.0|^9.0",
