Adapt and drop october/rain dependencies (#39)
* Upgrade to laravel 8

* Adapt october/rain library and remove dependencies

* wip

* fix style CI

* fix style CI

* remove laravel 8 stuff

* remove laravel 8 stuff

* Query all locations by default

Signed-off-by: Sam Poyigi <6567634+sampoyigi@users.noreply.github.com>

* Revert "Query all locations by default"

This reverts commit f1e78ec891c264df4cce4219604e15e9d8eae86c.

--- a/composer.json
+++ b/composer.json
@@ -30,12 +30,14 @@
     "ext-openssl": "*",
     "fideloper/proxy": "~4.0",
     "doctrine/instantiator": "~1.0",
-    "october/rain": "~1.1",
+    "doctrine/dbal": "~2.6",
     "guzzlehttp/guzzle": "~6.3",
     "kalnoy/nestedset": "~5.0",
     "natxet/cssmin": "~3.0",
     "scssphp/scssphp": "~1.0",
-    "league/glide": "~1.5"
+    "league/glide": "~1.5",
+    "fruitcake/laravel-cors": "~2.0",
+    "laravel/tinker": "~2.0"
   },
   "require-dev": {
     "phpunit/phpunit": "^8.0|^9.0",
