--- a/composer.json
+++ b/composer.json
@@ -34,9 +34,9 @@
     "guzzlehttp/guzzle": "~6.3",
     "kalnoy/nestedset": "~5.0",
     "natxet/cssmin": "~3.0",
+    "symfony/yaml": "~3.4",
     "scssphp/scssphp": "~1.0",
     "league/glide": "~1.5",
-    "fruitcake/laravel-cors": "~2.0",
     "laravel/tinker": "~2.0"
   },
   "require-dev": {
