Add fruitcate cors

--- a/composer.json
+++ b/composer.json
@@ -31,7 +31,8 @@
     "fideloper/proxy": "~4.0",
     "doctrine/instantiator": "~1.0",
     "doctrine/dbal": "~2.6",
-    "guzzlehttp/guzzle": "~6.3",
+    "fruitcake/laravel-cors": "^2.0",
+    "guzzlehttp/guzzle": "^7.0.1",
     "kalnoy/nestedset": "~5.0",
     "natxet/cssmin": "~3.0",
     "symfony/yaml": "~5.1",
