Update guzzle version to either v6 or v7

--- a/composer.json
+++ b/composer.json
@@ -32,7 +32,7 @@
     "doctrine/instantiator": "~1.0",
     "doctrine/dbal": "~2.6",
     "fruitcake/laravel-cors": "^2.0",
-    "guzzlehttp/guzzle": "^7.0.1",
+    "guzzlehttp/guzzle": "^6.3|^7.3",
     "kalnoy/nestedset": "~5.0",
     "natxet/cssmin": "~3.0",
     "symfony/yaml": "~5.1",
