--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -9,7 +9,7 @@ jobs:
     strategy:
       max-parallel: 6
       matrix:
-        php: ['7.4', '8.0']
+        php: ['7.4', '8.0', '8.1']
       fail-fast: false
 
     name: 'PHPUnit Tests ${{ matrix.php }} / ${{ matrix.dbName }}'
@@ -25,7 +25,7 @@ jobs:
           extensions: mbstring, intl, gd, xml, sqlite
 
       - name: Install composer dependencies
-        run: composer install --no-interaction --no-progress --no-suggest --no-scripts
+        run: composer install --no-interaction --no-progress --no-scripts
 
       - name: Run PHPUnit Test Suite
         run: ./vendor/bin/phpunit ./tests
