--- a/composer.json
+++ b/composer.json
@@ -43,6 +43,7 @@
   },
   "require-dev": {
     "phpunit/phpunit": "^8.0|^9.0",
+    "laravel/pint": "^1.2",
     "illuminate/database": "^8.0",
     "illuminate/encryption": "^8.0",
     "illuminate/filesystem": "^8.0",
