--- a/composer.json
+++ b/composer.json
@@ -38,6 +38,7 @@
     "mockery/mockery": "^1.4.4",
     "nunomaduro/collision": "^6.1",
     "orchestra/testbench": "^7.0",
+    "laravel/pint": "^1.2",
     "pestphp/pest": "^1.21",
     "pestphp/pest-plugin-laravel": "^1.2",
     "pestphp/pest-plugin-faker": "^1.0"
