--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -52,7 +52,7 @@ jobs:
         run: composer install --no-interaction --prefer-dist --no-progress --no-scripts
 
       - name: Run Pest Test Suite
-        run: vendor/bin/pest
+        run: vendor/bin/pest --verbose
 
     env:
       DB_PORT: 3306
